Agrego carpetas js y css con archivos actualizados

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
+<div class="lang-switch">
+  <button onclick="setLanguage('es')">
+    <img src="public/flag-arg.png" alt="Español" class="lang-icon" />
+  </button>
+  <button onclick="setLanguage('en')">
+    <img src="public/flag-uk.png" alt="English" class="lang-icon" />
+  </button>
+</div>
+
   <header>
     <img src="./assets/avatar.png" alt="Avatar de Germán" class="avatar" />
     <img src="./assets/logo-spanishxp.png" alt="Logo SpanishXP" class="logo" />
@@ -20,7 +29,7 @@
       <p>
         SpanishXP es una plataforma en crecimiento dedicada a enseñar español a extranjeros de forma auténtica, cultural y sin chamuyo: desde el idioma real que se habla en la calle hasta expresiones cotidianas, regionales, literatura, música, cine, humor, política y filosofía, con una fuerte impronta cordobesa. No me interesa un enfoque académico tradicional, sino generar experiencias de inmersión lingüística reales, entretenidas y significativas.
       </p>
-      <button onclick="document.getElementById('sobre-mi-audio').play()">🔊 Escuchar sobre mí</button>
+      <button onclick="toggleAudio()">🔊 Escuchar sobre mí</button>
       <audio id="sobre-mi-audio" src="./public/sobre-mi.mp3"></audio>
     </section>
 
@@ -45,6 +54,37 @@
     <a href="https://wa.me/5492995896138" target="_blank">💬 Hablá con el Pela</a>
   </footer>
 
+  <script>
+    const audio = document.getElementById('sobre-mi-audio');
+    let wasPausedManually = false;
+
+    function toggleAudio() {
+      if (audio.paused) {
+        if (wasPausedManually) {
+          audio.play();
+        } else {
+          audio.currentTime = 0;
+          audio.play();
+        }
+        wasPausedManually = false;
+      } else {
+        audio.pause();
+        wasPausedManually = true;
+      }
+    }
+  </script>
   <script src="./js/app.js"></script>
+<div class="social-icons">
+  <a href="https://www.instagram.com/spanishxpela/" target="_blank">
+    <img src="icon-instagram.png" alt="Instagram" class="social-icon" />
+  </a>
+  <a href="https://www.tiktok.com/@spanishxpela" target="_blank">
+    <img src="icon-tiktok.png" alt="TikTok" class="social-icon" />
+  </a>
+  <a href="https://www.youtube.com/channel/UCsOYMeI-VrJki1avnhHo7kw" target="_blank">
+    <img src="icon-youtube.png" alt="YouTube" class="social-icon" />
+  </a>
+</div>
+
 </body>
 </html>
