--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 <div class="lang-switch">
   <button onclick="setLanguage('es')">
-    <img src="public/flag-arg.png" alt="Español" class="lang-icon" />
+    <img src="./assets/flag-arg.png" alt="Español" class="lang-icon" />
   </button>
   <button onclick="setLanguage('en')">
-    <img src="public/flag-uk.png" alt="English" class="lang-icon" />
+    <img src="./assets/flag-uk.png" alt="English" class="lang-icon" />
   </button>
 </div>
 
@@ -76,13 +76,13 @@
   <script src="./js/app.js"></script>
 <div class="social-icons">
   <a href="https://www.instagram.com/spanishxpela/" target="_blank">
-    <img src="icon-instagram.png" alt="Instagram" class="social-icon" />
+    <img src="./public/icon-instagram.png" alt="Instagram" class="social-icon" />
   </a>
   <a href="https://www.tiktok.com/@spanishxpela" target="_blank">
-    <img src="icon-tiktok.png" alt="TikTok" class="social-icon" />
+    <img src="./public/icon-tiktok.png" alt="TikTok" class="social-icon" />
   </a>
   <a href="https://www.youtube.com/channel/UCsOYMeI-VrJki1avnhHo7kw" target="_blank">
-    <img src="icon-youtube.png" alt="YouTube" class="social-icon" />
+    <img src="./public/icon-youtube.png" alt="YouTube" class="social-icon" />
   </a>
 </div>
 
