modificaciones de iconos y agregado en seccion de redes

--- a/index.html
+++ b/index.html
@@ -74,17 +74,22 @@
     }
   </script>
   <script src="./js/app.js"></script>
-<div class="social-icons">
+<div class="social-section">
   <a href="https://www.instagram.com/spanishxpela/" target="_blank">
-    <img src="./public/icon-instagram.png" alt="Instagram" class="social-icon" />
+    <img src="./assets/icon-instagram.png" alt="Instagram" class="social-icon" />
   </a>
   <a href="https://www.tiktok.com/@spanishxpela" target="_blank">
-    <img src="./public/icon-tiktok.png" alt="TikTok" class="social-icon" />
+    <img src="./assets/icon-tiktok.png" alt="TikTok" class="social-icon" />
   </a>
   <a href="https://www.youtube.com/channel/UCsOYMeI-VrJki1avnhHo7kw" target="_blank">
-    <img src="./public/icon-youtube.png" alt="YouTube" class="social-icon" />
+    <img src="./assets/icon-youtube.png" alt="YouTube" class="social-icon" />
   </a>
+  <a href="https://wa.me/5492995896138" target="_blank">
+    <img src="./assets/icon-whatsapp.png" alt="WhatsApp" class="social-icon" />
+  </a>
+  <span class="social-text">Escribime y te cuento un poco más</span>
 </div>
+
 
 </body>
 </html>
