--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </main>
 
   <footer>
-    <p class="highlighted">SpanishXP — Experience, Platform, Power... por el Pela 😉</p>
+    <p class="highlighted">SpanishXP — Experience, Platform, Power... por el Pela </p>
     <p>Clases online, materiales exclusivos y un asistente inteligente que te ayuda a practicar.</p>
     <div class="social-icons">
       <a href="https://www.instagram.com/spanishxpela/" target="_blank">
@@ -57,7 +57,7 @@
       <a href="https://wa.me/5492995896138" target="_blank">
         <img src="./assets/icon-whatsapp.png" alt="WhatsApp" class="social-icon" />
       </a>
-      <span class="social-text">Escribime y te cuento un poco más</span>
+
     </div>
   </footer>
 
