--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       const respuesta = document.getElementById('respuesta');
       respuesta.innerText = "Pensando...";
 
-      const res = await fetch("https://api.abacus.ai/chat", {
+      const res = await fetch("https://backend-zl91.onrender.com/chat", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
